ClearProgress cold_mode_requester_ in Deactivate

This CL intends to fix a memory leak happening with a focused input form.
This seems to be happening because spellchecker holds a cold_mode_requester_, which holds an input element.
Spellchecker is reused (kept alive) by a local frame, so whatever spellchecker has references to will leak over navigation.
Other references were cleared in Deactivate() but the element was not.

BUG=852216

Change-Id: I96a872bad6348d7e1d6a160d2aa88d2fe9ba77cd
Reviewed-on: https://chromium-review.googlesource.com/1096926
Commit-Queue: Yuzu Saijo <yuzus@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567128}
Former-commit-id: cb6dc412b13ae7b6942a8731f67358b883d9ff45